@@ -16,12 +16,10 @@
  */
 package org.operaton.bpm.engine.test.api.authorization.batch;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.operaton.bpm.engine.authorization.Authorization.ANY;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
 
-import java.util.Arrays;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -35,6 +33,7 @@ import org.operaton.bpm.engine.authorization.Permissions;
 import org.operaton.bpm.engine.authorization.Resources;
 import org.operaton.bpm.engine.batch.Batch;
 import org.operaton.bpm.engine.batch.history.HistoricBatch;
+import org.operaton.bpm.engine.history.CleanableHistoricBatchReport;
 import org.operaton.bpm.engine.history.CleanableHistoricBatchReportResult;
 import org.operaton.bpm.engine.impl.util.ClockUtil;
 import org.operaton.bpm.engine.migration.MigrationPlan;
@@ -46,8 +45,8 @@ import org.operaton.bpm.engine.test.api.authorization.util.AuthorizationTestBase
 import org.operaton.bpm.engine.test.api.runtime.migration.models.ProcessModels;
 import org.operaton.bpm.engine.test.util.ProcessEngineTestRule;
 import org.operaton.bpm.engine.test.util.ProvidedProcessEngineRule;
+
 import org.junit.After;
-import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Rule;
 import org.junit.Test;
@@ -89,12 +88,12 @@ public class HistoricBatchQueryAuthorizationTest {
 
     batch1 = engineRule.getRuntimeService()
       .newMigration(migrationPlan)
-      .processInstanceIds(Arrays.asList(pi.getId()))
+      .processInstanceIds(List.of(pi.getId()))
       .executeAsync();
 
     batch2 = engineRule.getRuntimeService()
         .newMigration(migrationPlan)
-        .processInstanceIds(Arrays.asList(pi.getId()))
+        .processInstanceIds(List.of(pi.getId()))
         .executeAsync();
   }
 
@@ -131,8 +130,8 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(1, batches.size());
-    Assert.assertEquals(batch1.getId(), batches.get(0).getId());
+    assertThat(batches).hasSize(1);
+    assertThat(batches.get(0).getId()).isEqualTo(batch1.getId());
   }
 
   @Test
@@ -146,7 +145,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(1, count);
+    assertThat(count).isEqualTo(1);
   }
 
   @Test
@@ -157,7 +156,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(0, count);
+    assertThat(count).isZero();
   }
 
   @Test
@@ -171,7 +170,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(2, batches.size());
+    assertThat(batches).hasSize(2);
   }
 
   @Test
@@ -186,7 +185,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(2, batches.size());
+    assertThat(batches).hasSize(2);
   }
 
   @Test
@@ -201,7 +200,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertTrue(batches.isEmpty());
+    assertThat(batches).isEmpty();
   }
 
   @Test
@@ -216,7 +215,7 @@ public class HistoricBatchQueryAuthorizationTest {
     authRule.disableAuthorization();
 
     // then
-    Assert.assertEquals(0L, batchCount);
+    assertThat(batchCount).isZero();
   }
 
   @Test
@@ -230,7 +229,7 @@ public class HistoricBatchQueryAuthorizationTest {
     CleanableHistoricBatchReportResult result = engineRule.getHistoryService().createCleanableHistoricBatchReport().singleResult();
     authRule.disableAuthorization();
 
-    assertNotNull(result);
+    assertThat(result).isNotNull();
     checkResultNumbers(result, 1, 1, 0);
   }
 
@@ -239,19 +238,15 @@ public class HistoricBatchQueryAuthorizationTest {
     // given
     String migrationOperationsTTL = "P0D";
     prepareBatch(migrationOperationsTTL);
+    CleanableHistoricBatchReport batchReport = engineRule.getHistoryService().createCleanableHistoricBatchReport();
 
-    assertThatThrownBy(() -> {
-      authRule.enableAuthorization("user");
-      try {
-        // when
-        engineRule.getHistoryService().createCleanableHistoricBatchReport().list();
-      } finally {
-        authRule.disableAuthorization();
-      }
-    })
-    // then
-      .isInstanceOf(AuthorizationException.class);
-
+    authRule.enableAuthorization("user");
+    try {
+      assertThatThrownBy(batchReport::list)
+          .isInstanceOf(AuthorizationException.class);
+    } finally {
+      authRule.disableAuthorization();
+    }
   }
 
   private void prepareBatch(String migrationOperationsTTL) {
@@ -272,9 +267,9 @@ public class HistoricBatchQueryAuthorizationTest {
   }
 
   private void checkResultNumbers(CleanableHistoricBatchReportResult result, int expectedCleanable, int expectedFinished, Integer expectedTTL) {
-    assertEquals(expectedCleanable, result.getCleanableBatchesCount());
-    assertEquals(expectedFinished, result.getFinishedBatchesCount());
-    assertEquals(expectedTTL, result.getHistoryTimeToLive());
+    assertThat(result.getCleanableBatchesCount()).isEqualTo(expectedCleanable);
+    assertThat(result.getFinishedBatchesCount()).isEqualTo(expectedFinished);
+    assertThat(result.getHistoryTimeToLive()).isEqualTo(expectedTTL);
   }
 
 
@@ -290,7 +285,7 @@ public class HistoricBatchQueryAuthorizationTest {
 
      Batch batch = engineRule.getRuntimeService()
       .newMigration(plan)
-      .processInstanceIds(Arrays.asList(pi.getId()))
+      .processInstanceIds(List.of(pi.getId()))
       .executeAsync();
 
      return batch.getId();
