@@ -25,8 +25,8 @@ import org.operaton.bpm.engine.rest.exception.InvalidRequestException;
 import org.operaton.bpm.engine.rest.exception.RestException;
 import org.operaton.bpm.engine.variable.Variables;
 
-import javax.ws.rs.core.MultivaluedMap;
-import javax.ws.rs.core.Response.Status;
+import jakarta.ws.rs.core.MultivaluedMap;
+import jakarta.ws.rs.core.Response.Status;
 import java.lang.annotation.Annotation;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
@@ -60,9 +60,9 @@ public abstract class AbstractRestQueryParametersDto<T> extends QueryParameters 
   protected ObjectMapper objectMapper;
 
   // required for populating via jackson
-  public AbstractRestQueryParametersDto() { }
+  protected AbstractRestQueryParametersDto() { }
 
-  public AbstractRestQueryParametersDto(MultivaluedMap<String, String> queryParameters) {
+  protected AbstractRestQueryParametersDto(MultivaluedMap<String, String> queryParameters) {
     for (Entry<String, List<String>> param : queryParameters.entrySet()) {
       String key = param.getKey();
       String value = param.getValue().iterator().next();
@@ -141,12 +141,10 @@ public abstract class AbstractRestQueryParametersDto<T> extends QueryParameters 
 
       StringToTypeConverter<?> converter = null;
       try {
-        converter = converterClass.newInstance();
+        converter = converterClass.getDeclaredConstructor().newInstance();
         Object convertedValue = converter.convertQueryParameterToType(value);
         method.invoke(this, convertedValue);
-      } catch (InstantiationException e) {
-        throw new RestException(Status.INTERNAL_SERVER_ERROR, e, "Server error.");
-      } catch (IllegalAccessException e) {
+      } catch (InstantiationException | NoSuchMethodException | IllegalAccessException e) {
         throw new RestException(Status.INTERNAL_SERVER_ERROR, e, "Server error.");
       } catch (InvocationTargetException e) {
         throw new InvalidRequestException(Status.BAD_REQUEST, e, "Cannot set query parameter '" + key + "' to value '" + value + "'");
@@ -166,10 +164,8 @@ public abstract class AbstractRestQueryParametersDto<T> extends QueryParameters 
 
       for (int j = 0; j < methodAnnotations.length; j++) {
         Annotation annotation = methodAnnotations[j];
-        if (annotation instanceof OperatonQueryParam parameterAnnotation) {
-          if (parameterAnnotation.value().equals(parameterName)) {
-            result.add(method);
-          }
+        if (annotation instanceof OperatonQueryParam parameterAnnotation && parameterAnnotation.value().equals(parameterName)) {
+          result.add(method);
         }
       }
     }
